Removed old Ship Config And Tweaks
Removed redundent ship config
Tweaked Launch Bay grids

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -345,6 +345,13 @@ div.sheet-row1400
 	top: 1400px;
 }
 
+div.sheet-row1450
+{
+	position: absolute;
+	top: 1450px;
+}
+
+
 div.sheet-row1500
 {
 	position: absolute;
@@ -869,6 +876,134 @@ input[type="checkbox"].sheet-armourConditionSlot + span::before
 	content: "e";
 }
 
+/* Armor & Conditions toggles */
+
+.sheet-armor input[type="checkbox"],
+.sheet-resilance input[type="checkbox"],
+.sheet-integrity input[type="checkbox"],
+.sheet-vital input[type="checkbox"]
+{
+	z-index: 5;
+	opacity: 0;
+	height: 23px;
+	width: 23px !important;
+	min-width: 23px;
+	position: relative;
+	left: 13px;
+}
+
+.sheet-armor + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-armor input[type="checkbox"] + span.sheet-armor-x
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor2.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px !important;
+	opacity: 0;
+	z-index: 3;
+	position: relative;
+	left: -12px;
+	flex-shrink: 0;
+}
+
+.sheet-resilance + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-resiliance input[type="checkbox"] + span.sheet-resiliance-damage
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance2.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px !important;
+	opacity: 0;
+	z-index: 3;
+	position: relative;
+	left: -12px;
+	flex-shrink: 0;
+}
+
+.sheet-integrity + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-integrity input[type="checkbox"] + span.sheet-integrity-damage
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int2.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px !important;
+	opacity: 0;
+	z-index: 3;
+	position: relative;
+	left: -12px;
+	flex-shrink: 0;
+}
+
+.sheet-vital + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-vital input[type="checkbox"] + span.sheet-vital-damage
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital2.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px !important;
+	opacity: 0;
+	z-index: 3;
+	position: relative;
+	left: -12px;
+	flex-shrink: 0;
+}
+
 /* Fake checkbox checks as filled Armour condition slots*/
 input[type="checkbox"]:checked.sheet-armourConditionSlot + span::before
 {
@@ -1204,7 +1339,7 @@ button[type=roll].sheet-rollButton::before
 	background-repeat: no-repeat;
 	display: grid;
 	grid-template-columns: minmax(90px,150px), minmax(0px,50px), minmax(30px,80px);
-	grid-template-rows: repeat(10,minmax(5px,20px));
+	grid-template-rows: repeat(10,minmax(4px,20px));
 	grid-gap: 0px;
 	grid-template-areas: 'systemTitle systemTitle systemDamage' 'systemDetail systemDetail systemDetail' '. . systemRange' 'systemChargeTitle systemDivide systemDivide' 'systemListTitle systemListTitle .' 'systemListMod1 . systemListPips1' 'systemListMod2 . systemListPips2' 'systemListMod3 . systemListPips3' 'systemListMod4 . systemListPips4' '. . .';
 	height: 155px;
@@ -1762,8 +1897,8 @@ input[type="number"].sheet-currentCharge
 	background-size: 370px 335px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: minmax(4px,6px), minmax(0px,50px), minmax(30px,80px), minmax(90px,150px), minmax(0px,50px), minmax(30px,80px), minmax(0px,50px),;
-	grid-template-rows: repeat(18,minmax(5px,20px));
+	grid-template-columns: minmax(6px,10px), repeat(8,minmax(10px,80px));
+	grid-template-rows: repeat(19,minmax(5px,20px));
 	grid-gap: 0px;
 	height: 335px;
 	width: 370px;
@@ -1810,14 +1945,14 @@ input[type="number"].sheet-currentCharge
 	font-size: 10px;
 	grid-column-start: 1;
 	grid-row-start: 5;
-	grid-column-end: 5;
+	grid-column-end: 4;
 	grid-row-end: 6;
 }
 
 .sheet-launchBayTugDetails1
 {
 	font-size: 10px;
-	grid-column-start: 2;
+	grid-column-start: 3;
 	grid-row-start: 5;
 	grid-column-end: 5;
 	grid-row-end: 6;
@@ -1827,18 +1962,18 @@ input[type="number"].sheet-currentCharge
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 5;
-	grid-column-end: 5;
-	grid-row-end: 6;
+	grid-row-start: 6;
+	grid-column-end: 4;
+	grid-row-end: 7;
 }
 
 .sheet-launchBayTugDetails2
 {
 	font-size: 10px;
-	grid-column-start: 2;
-	grid-row-start: 5;
+	grid-column-start: 3;
+	grid-row-start: 6;
 	grid-column-end: 5;
-	grid-row-end: 6;
+	grid-row-end: 7;
 }
 
 .sheet-launchBayArmourPrinterTitle
@@ -1846,9 +1981,9 @@ input[type="number"].sheet-currentCharge
 	font-variant: small-caps;
 	font-size: 12px;
 	grid-column-start: 1;
-	grid-row-start: 6;
+	grid-row-start: 7;
 	grid-column-end: 5;
-	grid-row-end: 7;
+	grid-row-end: 8;
 	padding-left: 4px;
 }
 
@@ -1856,9 +1991,9 @@ input[type="number"].sheet-currentCharge
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 7;
+	grid-row-start: 8;
 	grid-column-end: 2;
-	grid-row-end: 8;
+	grid-row-end: 9;
 	text-align: center;
 }
 
@@ -1866,9 +2001,9 @@ input[type="number"].sheet-currentCharge
 {
 	font-size: 10px;
 	grid-column-start: 2;
-	grid-row-start: 7;
+	grid-row-start: 8;
 	grid-column-end: 3;
-	grid-row-end: 8;
+	grid-row-end: 9;
 	text-align: center;
 }
 
@@ -1876,20 +2011,11 @@ input[type="number"].sheet-currentCharge
 {
 	font-size: 10px;
 	grid-column-start: 3;
-	grid-row-start: 7;
-	grid-column-end: 4;
-	grid-row-end: 8;
+	grid-row-start: 8;
+	grid-column-end: 6;
+	grid-row-end: 9;
 	text-align: center;
-}
-
-.sheet-launchBayTugConditions
-{
-	font-size: 10px;
-	grid-column-start: 6;
-	grid-row-start: 4;
-	grid-column-end: 7;
-	grid-row-end: 6;
-	text-align: center;
+	flex-flow:nowrap;
 }
 
 .sheet-launchBayTrailerTitle
@@ -1897,27 +2023,27 @@ input[type="number"].sheet-currentCharge
 	font-variant: small-caps;
 	font-size: 12px;
 	grid-column-start: 1;
-	grid-row-start: 4;
+	grid-row-start: 10;
 	grid-column-end: 5;
-	grid-row-end: 5;
+	grid-row-end: 11;
 	padding-left: 4px;
 }
 
 .sheet-launchBayCapacityPips
 {
 	grid-column-start: 5;
-	grid-row-start: 7;
+	grid-row-start: 6;
 	grid-column-end: 7;
-	grid-row-end: 8;
+	grid-row-end: 7;
 	text-align: end;
 }
 
 .sheet-launchBayChargeTitle
 {
 	grid-column-start: 5;
-	grid-row-start: 7;
+	grid-row-start: 6;
 	grid-column-end: 7;
-	grid-row-end: 8;
+	grid-row-end: 7;
 	font-variant: small-caps;
 	font-size: 13px;
 	padding-left: 20px;
@@ -1926,16 +2052,16 @@ input[type="number"].sheet-currentCharge
 
 input[type="number"].sheet-tugReactorCharge
 {
-	height: 70px;
-	width: 80px;
+	height: 40px;
+	width: 40px;
 	font-size: 18px;
 }
 
 .sheet-launchBayChargeBox
 {
-	grid-column-start: 1;
+	grid-column-start: 5;
 	grid-row-start: 6;
-	grid-column-end: 3;
+	grid-column-end: 7;
 	grid-row-end: 10;
 	padding-left: 8px;
 	padding-bottom: 8px;
@@ -1943,10 +2069,60 @@ input[type="number"].sheet-tugReactorCharge
 
 .sheet-launchBayOverchargeSymbol
 {
-	grid-column-start: 1;
+	grid-column-start: 6;
+	grid-row-start: 8;
+	grid-column-end: 7;
+	grid-row-end: 9;
+	text-align: center;
+}
+
+.sheet-launchBayTugConditionTitle
+{
+	grid-column-start: 8;
+	grid-row-start: 2;
+	grid-column-end: 10;
+	grid-row-end: 3;
+	font-variant: small-caps;
+	flex-flow: nowrap;
+	font-size: 9px;
+	text-align: end;
+	padding-right: 3px;
+}
+
+.sheet-launchBayTugConditionResilience1
+{
+	grid-column-start: 9;
+	grid-row-start: 3;
+	grid-column-end: 10;
+	grid-row-end: 4;
+	text-align: center;
+}
+
+.sheet-launchBayTugConditionResilience2
+{
+	grid-column-start: 9;
+	grid-row-start: 4;
+	grid-column-end: 10;
+	grid-row-end: 5;
+	text-align: center;
+}
+
+
+.sheet-launchBayTugConditionIntegrity
+{
+	grid-column-start: 9;
+	grid-row-start: 5;
+	grid-column-end: 10;
+	grid-row-end: 6;
+	text-align: center;
+}
+
+.sheet-launchBayTugConditionVital
+{
+	grid-column-start: 9;
 	grid-row-start: 6;
-	grid-column-end: 3;
-	grid-row-end: 10;
+	grid-column-end: 10;
+	grid-row-end: 7;
 	text-align: center;
 }
 
@@ -1954,9 +2130,9 @@ input[type="number"].sheet-tugReactorCharge
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 5;
 	grid-column-end: 2;
-	grid-row-end: 6;
+	grid-row-start: 11;
+	grid-row-end: 12;
 	text-align: center;
 }
 
@@ -1964,36 +2140,36 @@ input[type="number"].sheet-tugReactorCharge
 {
 	font-size: 10px;
 	grid-column-start: 2;
-	grid-row-start: 5;
-	grid-column-end: 5;
-	grid-row-end: 6;
+	grid-column-end: 3;
+	grid-row-start: 11;
+	grid-row-end: 12;
 }
 
 .sheet-launchBayTrailerDetails1
 {
 	font-size: 10px;
-	grid-column-start: 2;
-	grid-row-start: 5;
+	grid-column-start: 3;
 	grid-column-end: 5;
-	grid-row-end: 6;
+	grid-row-start: 11;
+	grid-row-end: 12;
 }
 
 .sheet-launchBayTrailerArmour1
 {
 	font-size: 10px;
-	grid-column-start: 3;
-	grid-row-start: 5;
-	grid-column-end: 6;
-	grid-row-end: 6;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 11;
+	grid-row-end: 12;
 }
 
 .sheet-launchBayTrailerCost2
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 6;
 	grid-column-end: 2;
-	grid-row-end: 7;
+	grid-row-start: 12;
+	grid-row-end: 13;
 	text-align: center;
 }
 
@@ -2001,36 +2177,36 @@ input[type="number"].sheet-tugReactorCharge
 {
 	font-size: 10px;
 	grid-column-start: 2;
-	grid-row-start: 6;
-	grid-column-end: 5;
-	grid-row-end: 7;
+	grid-column-end: 3;
+	grid-row-start: 12;
+	grid-row-end: 13;
 }
 
 .sheet-launchBayTrailerDetails2
 {
 	font-size: 10px;
-	grid-column-start: 2;
-	grid-row-start: 6;
+	grid-column-start: 3;
 	grid-column-end: 5;
-	grid-row-end: 7;
+	grid-row-start: 12;
+	grid-row-end: 13;
 }
 
 .sheet-launchBayTrailerArmour2
 {
 	font-size: 10px;
-	grid-column-start: 3;
-	grid-row-start: 6;
-	grid-column-end: 6;
-	grid-row-end: 7;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 12;
+	grid-row-end: 13;
 }
 
 .sheet-launchBayTrailerCost3
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 7;
 	grid-column-end: 2;
-	grid-row-end: 8;
+	grid-row-start: 13;
+	grid-row-end: 14;
 	text-align: center;
 }
 
@@ -2038,36 +2214,36 @@ input[type="number"].sheet-tugReactorCharge
 {
 	font-size: 10px;
 	grid-column-start: 2;
-	grid-row-start: 7;
-	grid-column-end: 5;
-	grid-row-end: 8;
+	grid-column-end: 3;
+	grid-row-start: 13;
+	grid-row-end: 14;
 }
 
 .sheet-launchBayTrailerDetails3
 {
 	font-size: 10px;
-	grid-column-start: 2;
-	grid-row-start: 7;
+	grid-column-start: 3;
 	grid-column-end: 5;
-	grid-row-end: 8;
+	grid-row-start: 13;
+	grid-row-end: 14;
 }
 
 .sheet-launchBayTrailerArmour3
 {
 	font-size: 10px;
-	grid-column-start: 3;
-	grid-row-start: 7;
-	grid-column-end: 6;
-	grid-row-end: 8;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 13;
+	grid-row-end: 14;
 }
 
 .sheet-launchBayTrailerCost4
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 8;
 	grid-column-end: 2;
-	grid-row-end: 9;
+	grid-row-start: 14;
+	grid-row-end: 15;
 	text-align: center;
 }
 
@@ -2075,36 +2251,36 @@ input[type="number"].sheet-tugReactorCharge
 {
 	font-size: 10px;
 	grid-column-start: 2;
-	grid-row-start: 8;
-	grid-column-end: 5;
-	grid-row-end: 9;
+	grid-column-end: 3;
+	grid-row-start: 14;
+	grid-row-end: 15;
 }
 
 .sheet-launchBayTrailerDetails4
 {
 	font-size: 10px;
-	grid-column-start: 2;
-	grid-row-start: 8;
+	grid-column-start: 3;
 	grid-column-end: 5;
-	grid-row-end: 9;
+	grid-row-start: 14;
+	grid-row-end: 15;
 }
 
 .sheet-launchBayTrailerArmour4
 {
 	font-size: 10px;
-	grid-column-start: 3;
-	grid-row-start: 8;
-	grid-column-end: 6;
-	grid-row-end: 9;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 14;
+	grid-row-end: 15;
 }
 
 .sheet-launchBayTrailerCost5
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 9;
 	grid-column-end: 2;
-	grid-row-end: 10;
+	grid-row-start: 15;
+	grid-row-end: 16;
 	text-align: center;
 }
 
@@ -2112,36 +2288,36 @@ input[type="number"].sheet-tugReactorCharge
 {
 	font-size: 10px;
 	grid-column-start: 2;
-	grid-row-start: 9;
-	grid-column-end: 5;
-	grid-row-end: 10;
+	grid-column-end: 3;
+	grid-row-start: 15;
+	grid-row-end: 16;
 }
 
 .sheet-launchBayTrailerDetails5
 {
 	font-size: 10px;
-	grid-column-start: 2;
-	grid-row-start: 9;
+	grid-column-start: 3;
 	grid-column-end: 5;
-	grid-row-end: 10;
+	grid-row-start: 15;
+	grid-row-end: 16;
 }
 
 .sheet-launchBayTrailerArmour5
 {
 	font-size: 10px;
-	grid-column-start: 3;
-	grid-row-start: 9;
-	grid-column-end: 6;
-	grid-row-end: 10;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 15;
+	grid-row-end: 16;
 }
 
 .sheet-launchBayTrailerCost6
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 10;
 	grid-column-end: 2;
-	grid-row-end: 11;
+	grid-row-start: 16;
+	grid-row-end: 17;
 	text-align: center;
 }
 
@@ -2149,36 +2325,36 @@ input[type="number"].sheet-tugReactorCharge
 {
 	font-size: 10px;
 	grid-column-start: 2;
-	grid-row-start: 10;
-	grid-column-end: 5;
-	grid-row-end: 11;
+	grid-column-end: 3;
+	grid-row-start: 16;
+	grid-row-end: 17;
 }
 
 .sheet-launchBayTrailerDetails6
 {
 	font-size: 10px;
-	grid-column-start: 2;
-	grid-row-start: 10;
+	grid-column-start: 3;
 	grid-column-end: 5;
-	grid-row-end: 11;
+	grid-row-start: 16;
+	grid-row-end: 17;
 }
 
 .sheet-launchBayTrailerArmour6
 {
 	font-size: 10px;
-	grid-column-start: 3;
-	grid-row-start: 10;
-	grid-column-end: 6;
-	grid-row-end: 11;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 16;
+	grid-row-end: 17;
 }
 
 .sheet-launchBayTrailerCost7
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 11;
 	grid-column-end: 2;
-	grid-row-end: 12;
+	grid-row-start: 17;
+	grid-row-end: 18;
 	text-align: center;
 }
 
@@ -2186,36 +2362,36 @@ input[type="number"].sheet-tugReactorCharge
 {
 	font-size: 10px;
 	grid-column-start: 2;
-	grid-row-start: 11;
-	grid-column-end: 5;
-	grid-row-end: 12;
+	grid-column-end: 3;
+	grid-row-start: 17;
+	grid-row-end: 18;
 }
 
 .sheet-launchBayTrailerDetails7
 {
 	font-size: 10px;
-	grid-column-start: 2;
-	grid-row-start: 11;
+	grid-column-start: 3;
 	grid-column-end: 5;
-	grid-row-end: 12;
+	grid-row-start: 17;
+	grid-row-end: 18;
 }
 
 .sheet-launchBayTrailerArmour7
 {
 	font-size: 10px;
-	grid-column-start: 3;
-	grid-row-start: 11;
-	grid-column-end: 6;
-	grid-row-end: 12;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 17;
+	grid-row-end: 18;
 }
 
 .sheet-launchBayTrailerCost8
 {
 	font-size: 10px;
 	grid-column-start: 1;
-	grid-row-start: 12;
 	grid-column-end: 2;
-	grid-row-end: 13;
+	grid-row-start: 18;
+	grid-row-end: 19;
 	text-align: center;
 }
 
@@ -2223,36 +2399,66 @@ input[type="number"].sheet-tugReactorCharge
 {
 	font-size: 10px;
 	grid-column-start: 2;
-	grid-row-start: 12;
-	grid-column-end: 5;
-	grid-row-end: 13;
+	grid-column-end: 3;
+	grid-row-start: 18;
+	grid-row-end: 19;
 }
 
 .sheet-launchBayTrailerDetails8
 {
 	font-size: 10px;
-	grid-column-start: 2;
-	grid-row-start: 12;
+	grid-column-start: 3;
 	grid-column-end: 5;
-	grid-row-end: 13;
+	grid-row-start: 18;
+	grid-row-end: 19;
 }
 
 .sheet-launchBayTrailerArmour8
 {
 	font-size: 10px;
-	grid-column-start: 3;
-	grid-row-start: 12;
-	grid-column-end: 6;
-	grid-row-end: 13;
+	grid-column-start: 5;
+	grid-column-end: 7;
+	grid-row-start: 18;
+	grid-row-end: 19;
 }
 
-.sheet-launchBayTrailerConditions
+.sheet-launchBayTrailerConditionTitle
 {
-	font-size: 10px;
-	grid-column-start: 6;
-	grid-row-start: 7;
-	grid-column-end: 7;
-	grid-row-end: 10;
+	grid-column-start: 8;
+	grid-row-start: 11;
+	grid-column-end: 10;
+	grid-row-end: 12;
+	font-variant: small-caps;
+	flex-flow: nowrap;
+	font-size: 9px;
+	text-align: end;
+	padding-right: 3px;
+}
+
+.sheet-launchBayTrailerConditionResilience 
+{
+	grid-column-start: 9;
+	grid-row-start: 12;
+	grid-column-end: 10;
+	grid-row-end: 13;
+	text-align: center;
+}
+
+.sheet-launchBayTrailerConditionIntegrity
+{
+	grid-column-start: 9;
+	grid-row-start: 13;
+	grid-column-end: 10;
+	grid-row-end: 14;
+	text-align: center;
+}
+
+.sheet-launchBayTrailerConditionVital
+{
+	grid-column-start: 9;
+	grid-row-start: 14;
+	grid-column-end: 10;
+	grid-row-end: 15;
 	text-align: center;
 }
 
