skill 2nd row css

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -922,8 +922,48 @@ input.sheet-expand~.sheet-input-textarea,
 input.sheet-expand~.sheet-weapons-subgrid,
 input.sheet-expand~.sheet-armor-row2,
 input.sheet-expand~.sheet-shield-row2,
-input.sheet-expand~.sheet-animal-handling-row2 {
+input.sheet-expand~.sheet-animal-handling-row2,
+input.sheet-expand~.sheet-crafting-row2,
+input.sheet-expand~.sheet-endurance-row2,
+input.sheet-expand~.sheet-healing-row2,
+input.sheet-expand~.sheet-insight-row2,
+input.sheet-expand~.lore-row2,
+input.sheet-expand~.sheet-manipulation-row2,
+input.sheet-expand~.sheet-marksmanship-row2,
+input.sheet-expand~.sheet-melee-row2,
+input.sheet-expand~.sheet-might-row2,
+input.sheet-expand~.sheet-move-row2,
+input.sheet-expand~.sheet-performance-row2,
+input.sheet-expand~.sheet-scouting-row2,
+input.sheet-expand~.sheet-sleight-of-hand-row2,
+input.sheet-expand~.sheet-stealth-row2,
+input.sheet-expand~.sheet-survival-row2 {
   display: none;
+}
+
+input.sheet-expand:checked~.sheet-weapons-subgrid,
+input.sheet-expand:checked~.sheet-armor-row2,
+input.sheet-expand:checked~.sheet-shield-row2,
+input.sheet-expand:checked~.sheet-animal-handling-row2,
+input.sheet-expand:checked~.sheet-crafting-row2,
+input.sheet-expand:checked~.sheet-endurance-row2,
+input.sheet-expand:checked~.sheet-healing-row2,
+input.sheet-expand:checked~.sheet-insight-row2,
+input.sheet-expand:checked~.lore-row2,
+input.sheet-expand:checked~.sheet-manipulation-row2,
+input.sheet-expand:checked~.sheet-marksmanship-row2,
+input.sheet-expand:checked~.sheet-melee-row2,
+input.sheet-expand:checked~.sheet-might-row2,
+input.sheet-expand:checked~.sheet-move-row2,
+input.sheet-expand:checked~.sheet-performance-row2,
+input.sheet-expand:checked~.sheet-scouting-row2,
+input.sheet-expand:checked~.sheet-sleight-of-hand-row2,
+input.sheet-expand:checked~.sheet-stealth-row2,
+input.sheet-expand:checked~.sheet-survival-row2 {
+  display: grid;
+  box-sizing: border-box;
+  margin: 0;
+  border: 2px dotted #c3996b;
 }
 
 input.sheet-expand:checked~.sheet-input-textarea {
@@ -936,16 +976,6 @@ input.sheet-expand:checked~.sheet-input-textarea {
   border: 2px dotted #c3996b;
   overflow: hidden;
   overflow-y: auto;
-}
-
-input.sheet-expand:checked~.sheet-weapons-subgrid,
-input.sheet-expand:checked~.sheet-armor-row2,
-input.sheet-expand:checked~.sheet-shield-row2,
-input.sheet-expand:checked~.sheet-animal-handling-row2 {
-  display: grid;
-  box-sizing: border-box;
-  margin: 0;
-  border: 2px dotted #c3996b;
 }
 
 /* character grid layout */
