fixed lore 2nd row

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -927,7 +927,7 @@ input.sheet-expand~.sheet-crafting-row2,
 input.sheet-expand~.sheet-endurance-row2,
 input.sheet-expand~.sheet-healing-row2,
 input.sheet-expand~.sheet-insight-row2,
-input.sheet-expand~.lore-row2,
+input.sheet-expand~.sheet-lore-row2,
 input.sheet-expand~.sheet-manipulation-row2,
 input.sheet-expand~.sheet-marksmanship-row2,
 input.sheet-expand~.sheet-melee-row2,
@@ -949,7 +949,7 @@ input.sheet-expand:checked~.sheet-crafting-row2,
 input.sheet-expand:checked~.sheet-endurance-row2,
 input.sheet-expand:checked~.sheet-healing-row2,
 input.sheet-expand:checked~.sheet-insight-row2,
-input.sheet-expand:checked~.lore-row2,
+input.sheet-expand:checked~.sheet-lore-row2,
 input.sheet-expand:checked~.sheet-manipulation-row2,
 input.sheet-expand:checked~.sheet-marksmanship-row2,
 input.sheet-expand:checked~.sheet-melee-row2,
