Fixing Conditions to show AJ
trying to get the conditions and armour to work

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -876,8 +876,64 @@ input[type="checkbox"].sheet-armourConditionSlot + span::before
 	content: "e";
 }
 
-/* Armor & Conditions toggles */
+/* ******************************* */
+/*      Condition Graphics         */
+/* ******************************* */
 
+/* Armour & Condition graphics*/
+.sheet-armor + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-resilance + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-integrity + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-vital + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+/* Armor & Conditions toggles */
 .sheet-armor input[type="checkbox"],
 .sheet-resilance input[type="checkbox"],
 .sheet-integrity input[type="checkbox"],
@@ -892,20 +948,23 @@ input[type="checkbox"].sheet-armourConditionSlot + span::before
 	left: 13px;
 }
 
-.sheet-armor + input[type="checkbox"]
+.sheet-resilance input[type="checkbox"]
 {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
+	left: 3px;
 }
 
-.sheet-armor input[type="checkbox"] + span.sheet-armor-x
+.sheet-integrity input[type="checkbox"]
+{
+	left: 2px;
+}
+
+.sheet-vital input[type="checkbox"]
+{
+	left: 0px;
+}
+
+/* Armour & Condition Damaged graphics*/
+.sheet-armor input[type="checkbox"] + span.sheet-armor-damage
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor2.png);
 	background-size: 24px 24px;
@@ -918,19 +977,6 @@ input[type="checkbox"].sheet-armourConditionSlot + span::before
 	position: relative;
 	left: -12px;
 	flex-shrink: 0;
-}
-
-.sheet-resilance + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
 }
 
 .sheet-resiliance input[type="checkbox"] + span.sheet-resiliance-damage
@@ -948,19 +994,6 @@ input[type="checkbox"].sheet-armourConditionSlot + span::before
 	flex-shrink: 0;
 }
 
-.sheet-integrity + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
-}
-
 .sheet-integrity input[type="checkbox"] + span.sheet-integrity-damage
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int2.png);
@@ -974,19 +1007,6 @@ input[type="checkbox"].sheet-armourConditionSlot + span::before
 	position: relative;
 	left: -12px;
 	flex-shrink: 0;
-}
-
-.sheet-vital + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
 }
 
 .sheet-vital input[type="checkbox"] + span.sheet-vital-damage
@@ -1003,6 +1023,16 @@ input[type="checkbox"].sheet-armourConditionSlot + span::before
 	left: -12px;
 	flex-shrink: 0;
 }
+
+/* Opacity Control */
+.sheet-armor input[type="checkbox"]:checked + span.sheet-armor-damage,
+.sheet-resilance input[type="checkbox"]:checked + span.sheet-resiliance-damage,
+.sheet-integrity input[type="checkbox"]:checked + span.sheet-integrity-damage,
+.sheet-vital input[type="checkbox"]:checked + span.sheet-vital-damage
+{
+	opacity: 1;
+}
+
 
 /* Fake checkbox checks as filled Armour condition slots*/
 input[type="checkbox"]:checked.sheet-armourConditionSlot + span::before
@@ -2015,7 +2045,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 6;
 	grid-row-end: 9;
 	text-align: center;
-	flex-flow:nowrap;
+	flex-flow: nowrap;
 }
 
 .sheet-launchBayTrailerTitle
@@ -2435,7 +2465,7 @@ input[type="number"].sheet-tugReactorCharge
 	padding-right: 3px;
 }
 
-.sheet-launchBayTrailerConditionResilience 
+.sheet-launchBayTrailerConditionResilience
 {
 	grid-column-start: 9;
 	grid-row-start: 12;
@@ -2734,7 +2764,6 @@ input[type=number].sheet-txtfield
 
 
 	/*    Ship section component visuals    */
-
 	.sheet-ship-block .sheet-patches input[type="checkbox"]
 	{
 		transform: scale(1.5);
