str monster skills

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -2264,8 +2264,8 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 }
 
 .sheet-skills-grid button {
-  text-align: left;
-  padding-left: 1.5em;
+  text-align: center;
+  padding: 0;
 }
 
 .sheet-skills-box1 {
